--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio",
+  "homepage": "https://rayhan-habibi.github.io/Portfolio2/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
